--- a/gui/maininformation.kv
+++ b/gui/maininformation.kv
@@ -39,7 +39,7 @@
             ScrollView:
                 MDList:
                     OneLineListItem:
-                        text: f"[size=26][font=Icons]{md_icons['information-outline']}[/font][/size] [size=19]Information[/size]"
+                        text: f"[size=26sp][font=Icons]{md_icons['information-outline']}[/font][/size] [size=19sp]Information[/size]"
                         theme_text_color: "Custom"
                         text_color: C('FFFFFF')
                         on_release:
@@ -47,7 +47,7 @@
 
                     OneLineListItem:
                         text_color: C('FFFFFF')
-                        text: f"[size=22][font=Icons]{md_icons['book']}[/font][/size] Lore"
+                        text: f"[size=22sp][font=Icons]{md_icons['book']}[/font][/size] Lore"
                         theme_text_color: "Custom"
                         markup: True
 
@@ -57,7 +57,7 @@
 
                     OneLineListItem:
                         text_color: C('FFFFFF')
-                        text: f"[size=22][font=Icons]{md_icons['shield']}[/font][/size] Alignments"
+                        text: f"[size=22sp][font=Icons]{md_icons['shield']}[/font][/size] Alignments"
                         theme_text_color: "Custom"
                         markup: True
 
@@ -67,7 +67,7 @@
 
                     OneLineListItem:
                         text_color: C('FFFFFF')
-                        text: f"[size=22][font=Icons]{md_icons['account']}[/font][/size] Players"
+                        text: f"[size=22sp][font=Icons]{md_icons['account']}[/font][/size] Players"
                         theme_text_color: "Custom"
                         markup: True
 
@@ -77,7 +77,7 @@
 
                     OneLineListItem:
                         text_color: C('FFFFFF')
-                        text: f"[size=22][font=Icons]{md_icons['folder-search']}[/font][/size] Rounds"
+                        text: f"[size=22sp][font=Icons]{md_icons['folder-search']}[/font][/size] Rounds"
                         theme_text_color: "Custom"
                         markup: True
 
@@ -87,7 +87,7 @@
 
                     OneLineListItem:
                         text_color: C('FFFFFF')
-                        text: f"[size=22][font=Icons]{md_icons['file-code']}[/font][/size] Actions"
+                        text: f"[size=22sp][font=Icons]{md_icons['file-code']}[/font][/size] Actions"
                         theme_text_color: "Custom"
                         markup: True
 
@@ -97,7 +97,7 @@
 
                     OneLineListItem:
                         text_color: C('FFFFFF')
-                        text: f"[size=22][font=Icons]{md_icons['timer']}[/font][/size] Timer"
+                        text: f"[size=22sp][font=Icons]{md_icons['timer']}[/font][/size] Timer"
                         theme_text_color: "Custom"
                         markup: True
 
@@ -107,7 +107,7 @@
 
                     OneLineListItem:
                         text_color: C('FFFFFF')
-                        text: f"[size=22][font=Icons]{md_icons['folder']}[/font][/size] Logs"
+                        text: f"[size=22sp][font=Icons]{md_icons['folder']}[/font][/size] Logs"
                         theme_text_color: "Custom"
                         markup: True
 
@@ -117,7 +117,7 @@
 
                     OneLineListItem:
                         text_color: C('FFFFFF')
-                        text: f"[size=22][font=Icons]{md_icons['numeric-9-plus-box']}[/font][/size] Points"
+                        text: f"[size=22sp][font=Icons]{md_icons['numeric-9-plus-box']}[/font][/size] Points"
                         theme_text_color: "Custom"
                         markup: True
 
