--- a/dialogs/confirmdialog.kv
+++ b/dialogs/confirmdialog.kv
@@ -4,7 +4,7 @@
 
     MDCard:
         orientation: "vertical"
-        padding: 21
+        padding: "8dp"
         md_bg_color: app.theme_cls.primary_color
         border_radius: 20
         radius: [15]
@@ -34,7 +34,7 @@
 
         MDBoxLayout:
             orientation: "horizontal"
-            spacing: 15
+            spacing: "8dp"
 
             MDBoxLayout:
 
