--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -3,9 +3,9 @@
     auto_dismiss: False
 
     MDCard:
-        spacing: 10
+        spacing: "8dp"
         orientation: "vertical"
-        padding: 21
+        padding: "8dp"
         md_bg_color: app.theme_cls.primary_color
         border_radius: 20
         radius: [15]
@@ -26,8 +26,8 @@
             size_hint: 1, 0.01
 
         MDBoxLayout:
-            spacing: 4
-            padding: 8, 0, 8, 8
+            spacing: "8dp"
+            padding: "8dp"
             orientation: "vertical"
             canvas.before:
                 Color:
@@ -54,7 +54,7 @@
 
             MDBoxLayout:
                 orientation: "vertical"
-                padding: 4, 0, 4, 0
+                padding: "8dp"
                 canvas.before:
                     Color:
                         rgba: 0/255, 0/255, 0/255, 0.8
