--- a/gui/informationscreens/RoundsScreen.kv
+++ b/gui/informationscreens/RoundsScreen.kv
@@ -10,7 +10,7 @@
             right_action_items: [["close", lambda x: app.root.get_screen("maininfo").close()]]
 
         ScrollView:
-            bar_width: 10
+            bar_width: "8dp"
             bar_color: C('FFFFFF')
 
             MDBoxLayout:
@@ -18,8 +18,8 @@
                 size_hint: None, None
                 height: self.minimum_height
                 size: (root.width, root.height)
-                spacing: 10
-                padding: 21
+                spacing: "8dp"
+                padding: "8dp"
 
                 MDLabel:
                     adaptive_height: True
@@ -48,7 +48,7 @@
                 MDLabel:
                     text_color: app.theme_cls.primary_color
                     font_style: "Body2"
-                    text: f"[size=22][font=Icons]{md_icons['folder']}[/font][/size][color=#FFFFFF]: Unrevealed Evidence[/color]"
+                    text: f"[size=22sp][font=Icons]{md_icons['folder']}[/font][/size][color=#FFFFFF]: Unrevealed Evidence[/color]"
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
@@ -56,7 +56,7 @@
                 MDLabel:
                     text_color: C('FFFFFF')
                     font_style: "Body2"
-                    text: f"[color=#1565c0][size=22][font=Icons]{md_icons['folder-key']}[/font][/size][/color]: Exclusive Evidence"
+                    text: f"[color=#1565c0][size=22sp][font=Icons]{md_icons['folder-key']}[/font][/size][/color]: Exclusive Evidence"
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
@@ -81,7 +81,7 @@
                     MDLabel:
                         text_color: app.theme_cls.primary_color
                         font_style: "Body2"
-                        text: f" [color=#FFFFFF][font=Icons][size=22]{md_icons['folder-search']}[/font][/size] Round 1:[/color] [size=22][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
+                        text: f" [color=#FFFFFF][font=Icons][size=22sp]{md_icons['folder-search']}[/font][/size] Round 1:[/color] [size=22sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
                         theme_text_color: "Custom"
                         adaptive_height: True
                         markup: True
@@ -92,7 +92,7 @@
                         text_color: app.theme_cls.primary_color
                         font_style: "Body2"
                         md_bg_color: app.theme_cls.primary_dark
-                        text: f" [color=#FFFFFF][font=Icons][size=22]{md_icons['folder-search']}[/font][/size] Round 2:[/color] [size=22][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size][color=#FFFFFF],[/color] [size=22][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
+                        text: f" [color=#FFFFFF][font=Icons][size=22sp]{md_icons['folder-search']}[/font][/size] Round 2:[/color] [size=22][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size][color=#FFFFFF],[/color] [size=22sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
                         theme_text_color: "Custom"
                         adaptive_height: True
                         markup: True
@@ -102,7 +102,7 @@
                     MDLabel:
                         text_color: app.theme_cls.primary_color
                         font_style: "Body2"
-                        text: f" [color=#FFFFFF][size=22][font=Icons]{md_icons['folder-search']}[/font][/size] Round 3:[/color][color=#1565c0] [size=22][font=Icons]{md_icons['folder-key']}[/font] [font=Icons]{md_icons['folder-key']}[/font][/size][/color][color=#FFFFFF],[/color] [color=#1565c0][size=22][font=Icons]{md_icons['folder-key']}[/font] [font=Icons]{md_icons['folder-key']}[/font][/size][/color]"
+                        text: f" [color=#FFFFFF][size=22sp][font=Icons]{md_icons['folder-search']}[/font][/size] Round 3:[/color][color=#1565c0] [size=22sp][font=Icons]{md_icons['folder-key']}[/font] [font=Icons]{md_icons['folder-key']}[/font][/size][/color][color=#FFFFFF],[/color] [color=#1565c0][size=22][font=Icons]{md_icons['folder-key']}[/font] [font=Icons]{md_icons['folder-key']}[/font][/size][/color]"
                         theme_text_color: "Custom"
                         adaptive_height: True
                         markup: True
@@ -120,7 +120,7 @@
                 MDLabel:
                     text_color: app.theme_cls.primary_color
                     font_style: "Body2"
-                    text: f"In order to begin the next round, the [color=#FFFFFF][size=22][font=Icons]{md_icons['play']}[/font][/size][/color] at the bottom must be pressed. It is only available once all logs have been uploaded for the round and the timer has ended. The timer may also end prematurely if agreed upon. Please review the timer section for more information."
+                    text: f"In order to begin the next round, the [color=#FFFFFF][size=22sp][font=Icons]{md_icons['play']}[/font][/size][/color] at the bottom must be pressed. It is only available once all logs have been uploaded for the round and the timer has ended. The timer may also end prematurely if agreed upon. Please review the timer section for more information."
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
@@ -138,7 +138,7 @@
                 MDLabel:
                     text_color: app.theme_cls.primary_color
                     font_style: "Body2"
-                    text: f"At the top of the screen there are three [color=#FFFFFF][size=22][font=Icons]{md_icons['circle-outline']}[/font][/size][/color]'s which represent each round. When a round begins, a [color=#FFFFFF][size=22][font=Icons]{md_icons['circle-outline']}[/font][/size][/color] becomes a [color=#FFFFFF][size=22][font=Icons]{md_icons['circle-slice-8']}[/font][/size][/color] to indicate what the current round is. The game ends once all three rounds have been completed. Once the game ends, a [color=#FFFFFF][size=22][font=Icons]{md_icons['chevron-right']}[/font][/size][/color] will appear at the bottom right of the screen which will take you to the results screen."
+                    text: f"At the top of the screen there are three [color=#FFFFFF][size=22sp][font=Icons]{md_icons['circle-outline']}[/font][/size][/color]'s which represent each round. When a round begins, a [color=#FFFFFF][size=22sp][font=Icons]{md_icons['circle-outline']}[/font][/size][/color] becomes a [color=#FFFFFF][size=22sp][font=Icons]{md_icons['circle-slice-8']}[/font][/size][/color] to indicate what the current round is. The game ends once all three rounds have been completed. Once the game ends, a [color=#FFFFFF][size=22sp][font=Icons]{md_icons['chevron-right']}[/font][/size][/color] will appear at the bottom right of the screen which will take you to the results screen."
                     theme_text_color: "Custom"
                     adaptive_height: True
                     markup: True
