--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -40,6 +40,7 @@
                 markup: True
 
             MDBoxLayout:
+                size_hint: 1, 0.7
 
             MDGridLayout:
                 cols: 2
@@ -106,6 +107,7 @@
                         root.selectcheck(butt6)
 
         MDBoxLayout:
+            size_hint: 1, 0.6
 
         MDBottomAppBar:
             MDToolbar:
