--- a/gui/welcome.kv
+++ b/gui/welcome.kv
@@ -4,7 +4,7 @@
     AnchorLayout:
         Image:
             size_hint: None, None
-            size: "1644dp", "3840dp"
+            size: 1644, 3840
             source: "images/defaultback.png"
 
     MDBoxLayout:
@@ -17,7 +17,7 @@
         MDBoxLayout:
             orientation: "vertical"
             spacing: "8dp"
-            padding: "8dp", "8dp", "8dp", "20dp"
+            padding: "8dp", "8dp", "8dp", "40dp"
 
             MDLabel:
                 adaptive_height: True
