--- a/gui/informationscreens/RoundsScreen.kv
+++ b/gui/informationscreens/RoundsScreen.kv
@@ -92,7 +92,7 @@
                         text_color: app.theme_cls.primary_color
                         font_style: "Body2"
                         md_bg_color: app.theme_cls.primary_dark
-                        text: f" [color=#FFFFFF][font=Icons][size=22sp]{md_icons['folder-search']}[/font][/size] Round 2:[/color] [size=22][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size][color=#FFFFFF],[/color] [size=22sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
+                        text: f" [color=#FFFFFF][font=Icons][size=22sp]{md_icons['folder-search']}[/font][/size] Round 2:[/color] [size=22sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size][color=#FFFFFF],[/color] [size=22sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
                         theme_text_color: "Custom"
                         adaptive_height: True
                         markup: True
@@ -102,7 +102,7 @@
                     MDLabel:
                         text_color: app.theme_cls.primary_color
                         font_style: "Body2"
-                        text: f" [color=#FFFFFF][size=22sp][font=Icons]{md_icons['folder-search']}[/font][/size] Round 3:[/color][color=#1565c0] [size=22sp][font=Icons]{md_icons['folder-key']}[/font] [font=Icons]{md_icons['folder-key']}[/font][/size][/color][color=#FFFFFF],[/color] [color=#1565c0][size=22][font=Icons]{md_icons['folder-key']}[/font] [font=Icons]{md_icons['folder-key']}[/font][/size][/color]"
+                        text: f" [color=#FFFFFF][size=22sp][font=Icons]{md_icons['folder-search']}[/font][/size] Round 3:[/color][color=#1565c0] [size=22sp][font=Icons]{md_icons['folder-key']}[/font] [font=Icons]{md_icons['folder-key']}[/font][/size][/color][color=#FFFFFF],[/color] [color=#1565c0][size=22sp][font=Icons]{md_icons['folder-key']}[/font] [font=Icons]{md_icons['folder-key']}[/font][/size][/color]"
                         theme_text_color: "Custom"
                         adaptive_height: True
                         markup: True
