--- a/dialogs/rematchdialog.kv
+++ b/dialogs/rematchdialog.kv
@@ -4,7 +4,7 @@
 
     MDCard:
         orientation: "vertical"
-        padding: 21
+        padding: "8dp"
         md_bg_color: app.theme_cls.primary_color
         border_radius: 20
         radius: [15]
