Third android attempt.

--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -1,5 +1,5 @@
 <LogDialog>:
-    size_hint: 0.8, 0.5
+    size_hint: 0.9, 0.5
     auto_dismiss: False
 
     MDCard:
@@ -74,7 +74,7 @@
                     theme_text_color: "Custom"
                     font_style: 'Subtitle2'
                     halign: "center"
-                    text: f"[size=30][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
+                    text: f"[size=30sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
 
                 MDLabel:
                     text_color: app.theme_cls.primary_color
